[project]
name = "ricktouch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "flask>=3.1.1",
    "imutils>=0.5.4",
    "keyboard>=0.13.5",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pyinstaller>=6.14.2",
    "pyttsx3>=2.99",
    "scipy>=1.16.0",
]
